# Airplay-Free

./: !BUILDING.txt  !HISTORY.txt  !LICENSE.txt  !README.txt  README_WINDOWS.md  _Remote Speakers output.vs2008.sln  _Remote Speakers output.vs2010.bat  _Remote Speakers output.vs2010.sln  clean.vs2008.bat  clean.vs2010.bat  foobar.vcproj  foobar.vcxproj  libsamplerate.vcproj  libsamplerate.vcxproj  rsoutput.vcproj  rsoutput.vcxproj  rsoutput.vcxproj.filters  winamp.vcproj  winamp.vcxproj  xmplay.vcproj  xmplay.vcxproj
foobar/src/: FoobarPlayer.cpp  FoobarPlayer.h  Main.cpp  Menu.cpp  MyGuids.cpp  Options.cpp  Output.cpp  Resources.rc  StdAfx.cpp  StdAfx.h
linux_app/: CMakeLists.txt
linux_app/src/: LinuxPlayer.h  Platform_Linux.cpp  PulseAudioSource.h  main.cpp
rsoutput/lib/alac/: ALACEncoder.cpp  ALACEncoder.h
rsoutput/sdk/: Debugger.h  DeviceUtils.h  MessageDialog.h  OptionsDialog.h  OptionsUtils.h  OutputComponent.h  OutputFormat.h  OutputMetadata.h  Platform.h  Platform.inl  Player.h  Plugin.h  Uncopyable.h
rsoutput/src/core/: DeviceDiscovery.h  DeviceInfo.h  DeviceNotification.h  NumberParser.h  Options.h  ServiceDiscovery.h
rsoutput/src/core/impl/: Debugger.cpp  Device.h  DeviceDiscovery.cpp  DeviceInfo.cpp  DeviceManager.cpp  DeviceManager.h  DeviceUtils.cpp  Main.cpp  Options.cpp  OutputBuffer.cpp  OutputBuffer.h  OutputComponent.cpp  OutputFormat.cpp  OutputMetadata.cpp  OutputObserver.h  OutputReformatter.cpp  OutputReformatter.h  OutputSink.h  Platform.cpp  Plugin.cpp  RemoteControl.cpp  RemoteControl.h  ServiceDiscovery.cpp  dns_sd.h  dns_sd_stub.cpp
rsoutput/src/core/impl/raop/: NTPTimestamp.cpp  NTPTimestamp.h  PacketBuffer.cpp  PacketBuffer.h  RAOPDefs.h  RAOPDevice.cpp  RAOPDevice.h  RAOPEngine.cpp  RAOPEngine.h  RTSPClient.cpp  RTSPClient.h  Random.h
rsoutput/src/view/: ConnectDialog.h  PasswordDialog.h
rsoutput/src/view/impl/: ConnectDialog.cpp  DeviceDialog.cpp  DeviceDialog.h  Dialog.cpp  Dialog.h  MessageDialog.cpp  OptionsDialog.cpp  PasswordDialog.cpp  Resources.h  Resources.rc
winamp/sdk/: mm.idl  mm_h.h  mm_i.c
winamp/sdk/wasabi/: api_albumart.h  api_memmgr.h  api_service.h  dispatch.h  nsguid.h  platform.h  platform_guid.h  platform_types.h  services.h  svc_albumArtProvider.h  svc_imgload.h  svc_imgwrite.h  waservicefactory.h
winamp/src/: Main.cpp  Output.cpp  Output.h  Resources.h  Resources.rc  WinampHooks.cpp  WinampHooks.h  WinampPlayer.cpp  WinampPlayer.h
windows_airplay_plan/: README.md
windows_app/: CMakeLists.txt  vcpkg.json
windows_app/src/: WASAPICapture.cpp  WASAPICapture.h  WindowsPlayer.h  main.cpp
windows_app_prototype/: AirPlaySender.csproj  Program.cs
xmplay/sdk/: xmpfunc.h  xmpout.h
xmplay/src/: Main.cpp  Output.cpp  Output.h  Resources.h  Resources.rc  XMPlayPlayer.cpp  XMPlayPlayer.h
